# practice

./: .gitignore  CMakeLists.txt  README.md  practice.sln
practice 2.1/: Triangle.cpp  Triangle.h  practice 2.1.cpp  practice 2.1.vcxproj  practice 2.1.vcxproj.filters
practice 2.1/x64/Debug/: practice 2.1.exe.recipe  practice 2.1.ilk  vc143.idb
practice 2.1/x64/Release/: practice 2.1.exe.recipe  practice 2.1.iobj  practice 2.1.ipdb
practice 2.2/: Circle.cpp  Circle.h  practice 2.2.cpp  practice 2.2.vcxproj
practice 2.3/: figure.cpp  figure.h  practice 2.3.cpp  practice 2.3.vcxproj  practice 2.3.vcxproj.filters
practice 2.3/x64/Debug/: practice 2.3.exe.recipe  (+2 more)
practice 2/practice 2.1/: practice 2.1.cpp  practice 2.1.vcxproj
practice 2/practice 2.2/: Circle.cpp  Circle.h  practice 2.2.cpp  practice 2.2.vcxproj.filters
practice 2/practice 2.3/: figure.h  practice 2.3.cpp
practice 3.1/: eq2.cpp  eq2.h  practice 3.1.cpp  practice 3.1.vcxproj  practice 3.1.vcxproj.filters
practice 3.2/: practice 3.2.cpp  practice 3.2.vcxproj.filters  rational.cpp
practice 3.3/: practice 3.3.cpp  practice 3.3.vcxproj  practice 3.3.vcxproj.filters  rational.cpp  rational.h
practice 3/practice 3.1/: practice 3.1.cpp
practice 3/practice 3.2/: practice 3.2.cpp  practice 3.2.vcxproj  rational.h
practice 3/practice 3.3/: practice 3.3.cpp  practice 3.3.vcxproj  rational.cpp
practice 6/practice 6.1/: Cone.cpp  Cone.h  cone.cpp  cone.h  practice 6.1.cpp
practice 6/practice 6.2/: Cone.cpp  Cone.h  cone.cpp  cone.h  practice 6.2.cpp
practice 6/practice 6.3/: practice 6.3.cpp
(+46 files in other folders)
